fixed scaling on safari

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-wrap: wrap;
 }
 
 #button {
